# iterateKT

./: .gitignore  CMakeLists.txt  README.md  macos_build.sh
analysis/COMPASS_pi1/: data.hpp  fitter.hpp
analysis/COMPASS_pi1/raw_files/: dalitz_m3pi_bin_number_11_tBin_3.json  dalitz_m3pi_bin_number_12_tBin_3.json  dalitz_m3pi_bin_number_13_tBin_3.json  dalitz_m3pi_bin_number_14_tBin_3.json  dalitz_m3pi_bin_number_15_tBin_3.json  dalitz_m3pi_bin_number_16_tBin_3.json  dalitz_m3pi_bin_number_17_tBin_3.json  dalitz_m3pi_bin_number_18_tBin_3.json  dalitz_m3pi_bin_number_19_tBin_3.json  dalitz_m3pi_bin_number_20_tBin_3.json  dalitz_m3pi_bin_number_21_tBin_3.json  dalitz_m3pi_bin_number_22_tBin_3.json  dalitz_m3pi_bin_number_23_tBin_3.json  dalitz_m3pi_bin_number_24_tBin_3.json  dalitz_m3pi_bin_number_25_tBin_3.json  dalitz_m3pi_bin_number_26_tBin_3.json  dalitz_m3pi_bin_number_27_tBin_3.json  dalitz_m3pi_bin_number_28_tBin_3.json  dalitz_m3pi_bin_number_29_tBin_3.json  dalitz_m3pi_bin_number_30_tBin_3.json  dalitz_m3pi_bin_number_31_tBin_3.json  dalitz_m3pi_bin_number_32_tBin_3.json  dalitz_m3pi_bin_number_33_tBin_3.json  dalitz_m3pi_bin_number_34_tBin_3.json  dalitz_m3pi_bin_number_35_tBin_3.json  dalitz_m3pi_bin_number_36_tBin_3.json  dalitz_m3pi_bin_number_37_tBin_3.json  dalitz_m3pi_bin_number_38_tBin_3.json  dalitz_m3pi_bin_number_39_tBin_3.json  dalitz_m3pi_bin_number_40_tBin_3.json  dalitz_m3pi_bin_number_41_tBin_3.json  dalitz_m3pi_bin_number_42_tBin_3.json  dalitz_m3pi_bin_number_43_tBin_3.json  dalitz_m3pi_bin_number_44_tBin_3.json  dalitz_m3pi_bin_number_45_tBin_3.json  dalitz_m3pi_bin_number_46_tBin_3.json  dalitz_m3pi_bin_number_47_tBin_3.json  dalitz_m3pi_bin_number_48_tBin_3.json  dalitz_m3pi_bin_number_49_tBin_3.json
analysis/K_3pi/: data.hpp  fitter.hpp
data/COMPASS/: data.hpp
data/K_3pi/: data.hpp
physics/amplitudes/: eta.hpp  kaon.hpp  omega.hpp  pi1.hpp  vector.hpp
physics/decays/: isoscalar_pseudoscalar.hpp  isoscalar_vector.hpp  vector.hpp
physics/isobars/: eta.hpp  kaon.hpp  omega.hpp  pi1.hpp  vector.hpp
physics/phase_shifts/: README.md
physics/phaseshifts/: GKPY.hpp
scripts/: eta_decay.cpp  kaon_decay.cpp  omega_decay.cpp  pi1_decay.cpp
scripts/kaon/: calculate_imaginary.cpp  calculate_isobars.cpp  calculate_observables.cpp  duplicate_isobars.cpp  fit.cpp  plot_comparison.cpp
scripts/pi1/: compare.cpp  fit.cpp  iterations.cpp  plot_data.cpp
scripts/tests/: test_bounds.cpp  test_inhomogeneity.cpp  test_iteration.cpp  test_omnes.cpp  test_pinocchio.cpp
scripts/tests/eta/: test_iteration.cpp  test_omnes.cpp  test_pinocchio.cpp
scripts/tests/omega/: test_bounds.cpp  test_inhomogeneity.cpp  test_iteration.cpp  test_omnes.cpp  test_pinocchio.cpp
scripts/vectors/: jpsi_decay.cpp  omega_decay.cpp  rho_omega_mixing.cpp
src/: CMakeLists.txt  GKPY.hpp  ITERATEDOKTLinkDef.h  ITERATEKTLinkDef.h  amplitude.cpp  amplitude.hpp  basis.hpp  basis_grid.hpp  colors.hpp  constants.hpp  data_set.hpp  fitter.hpp  isobar.cpp  isobar.hpp  iteration.cpp  iteration.hpp  kinematics.cpp  kinematics.hpp  phase_shift.hpp  plot.cpp  plot.hpp  plot2D.cpp  plot2D.hpp  plotter.cpp  plotter.hpp  settings.hpp  solver.cpp  solver.hpp  timer.hpp  utilities.hpp
src/cling/: Load.C  iterateKT.cpp  iteratedOKT.cpp
